websocket server integration with grpc client

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,8 @@ gcloud==0.17.0
 grpcio==0.15.0
 grpc-google-cloud-speech-v1beta1==1.0.1
 grpcio-tools
-autobahn
-twisted
 pyOpenSSL
 cryptography
 ws4py
 blessings
+tornado
