--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
-	"asr": ["google", "ibm", "hound"],
+	"asrs": ["google", "ibm", "hound"],
 	"language": "en-US",
 	"encoding":"LINEAR16",
-	"rate":16000,
+	"sampling_rate":16000,
 	"max_alternatives":5,
 	"interim_results": true,
 	"profanity_filter": true,
