fixed threading bugs in continuous mode; changed thread to threading library

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-	"asrs": ["google", "ibm", "hound"],
+	"asrs": ["google", "hound", "ibm"],
 	"language": "en-US",
 	"encoding":"LINEAR16",
 	"sampling_rate":16000,
