--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-gcloud==0.17.0
+google-cloud-speech==0.28.0
 grpcio==1.0.0
-grpc-google-cloud-speech-v1beta1==1.0.1
 grpcio-tools
 pyOpenSSL
 cryptography
 ws4py
 blessings
-tornado
 requests
-pymongo
 webrtcvad
